fixed alignment of paper links and added link to some posters and slides

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,13 +7,13 @@
 a[target="_blank"]:not(.social-media-list a):not(.site-nav a):not(.profile-links a)::after {
   content: "";
   display: inline-block;
-  width: 0.7em;
-  height: 0.7em;
+  width: 0.9em;
+  height: 0.9em;
   margin-left: 0.2em;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23828282' d='M14 5a1 1 0 1 1 0-2h7a1 1 0 0 1 1 1v7a1 1 0 1 1-2 0V6.414l-9.293 9.293a1 1 0 0 1-1.414-1.414L18.586 5H14zM3 7a2 2 0 0 1 2-2h5a1 1 0 0 1 0 2H5v12h12v-5a1 1 0 1 1 2 0v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: contain;
-  vertical-align: middle;
+  vertical-align: -0.1em;
 }
 
 a.doi-link {
@@ -23,7 +23,7 @@ a.doi-link {
   border: 1px solid #828282;
   border-radius: 3px;
   padding: 1px 4px;
-  vertical-align: middle;
+  vertical-align: 0.1em;
   text-decoration: none;
   &:hover {
     color: #111;
@@ -76,4 +76,37 @@ h1, h2 {
     opacity: 1;
     text-decoration: none;
   }
+}
+
+
+a.download-link {
+  font-size: 0.75em;
+  font-weight: bold;
+  color: #828282;
+  border: 1px solid #828282;
+  border-radius: 3px;
+  padding: 1px 4px;
+  vertical-align: 0.1em;
+  text-decoration: none;
+  &:hover {
+    color: #111;
+    border-color: #111;
+    text-decoration: none;
+  }
+}
+
+a.download-link::after {
+  content: "";
+  display: inline-block;
+  width: 1.1em;
+  height: 1.1em;
+  margin-left: 0.2em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23828282' d='M12 16l-5-5h3V4h4v7h3l-5 5zm-7 2h14v2H5v-2z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  vertical-align: -0.2em;
+}
+
+a.download-link:hover::after {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23111' d='M12 16l-5-5h3V4h4v7h3l-5 5zm-7 2h14v2H5v-2z'/%3E%3C/svg%3E");
 }
